# mcp-aegis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
apps/: README.md
apps/admin-web/: README.md
apps/aegis-cli/: README.md
apps/control-api/: README.md  go.mod
apps/control-api/cmd/control-api/: main.go
apps/control-api/internal/app/: app.go
apps/control-api/internal/config/: config.go
apps/control-api/internal/domain/: assessment.go  audit.go  models.go
apps/gateway/: README.md
db/: README.md
db/migrations/: 0001_initial.sql  0002_assessment_fields.sql
deploy/: README.md
deploy/docker-compose/: README.md
docs/: architecture.md  policy-spec.md  roadmap.md  threat-model.md
services/: README.md
services/analyzers/: README.md  pyproject.toml
services/analyzers/tests/: test_scanner.py
services/registry-sync/: README.md  pyproject.toml
services/registry-sync/examples/: latest.json
services/registry-sync/src/mcpaegis_registry_sync/: __init__.py  client.py  config.py  main.py  models.py  normalize.py  writer.py
services/registry-sync/tests/: test_normalize.py
services/scan-orchestrator/: README.md  pyproject.toml
services/scan-orchestrator/examples/audit/: fixture-malicious-server.audit.jsonl
services/scan-orchestrator/examples/reports/: fixture-malicious-server.json
services/scan-orchestrator/src/mcpaegis_scan_orchestrator/: __init__.py  audit.py  launcher.py  main.py  postgres_export.py  recommendations.py  runner.py  runtime_adapters.py
services/scan-orchestrator/tests/: test_pipeline.py  test_runner.py
(+13 files in other folders)
