[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpaegis-registry-sync"
version = "0.1.0"
description = "Registry sync worker for MCP Aegis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mcp-aegis-registry-sync = "mcpaegis_registry_sync.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
